# jack-lang-compiler

./: .clang-format  .gitignore  .gitmodules  .projectile  CMakeLists.txt  LICENSE  class-diagram.plantuml  todo.org
gold/: array.cpp  early.cpp  if.cpp  string.cpp  string.ll  struct.cpp  while.cpp
include/: ASTBuilder.hpp  CompilationEngine.hpp  DataStructures.hpp  ErrorHandling.hpp  JackAST.hpp  JackAST_fwd.hpp  JackJIT.hpp  JackLexer.hpp  JackWriter.hpp  LLVMGenerator.hpp  NameMangling.hpp  PrettyPrinter.hpp  Runtime.hpp  SymbolTable.hpp  Visitor.hpp
src/: CMakeLists.txt  JackAST.cpp
src/app/: CMakeLists.txt  Compiler.cpp
src/codegen/: CMakeLists.txt  JackWriter.cpp  LLVMGenerator.cpp  PrettyPrinter.cpp
src/frontend/: CMakeLists.txt  CompilationEngine.cpp  JackAST.cpp  JackLexer.cpp  SymbolTable.cpp
src/runtime/: Builtins.hpp  CMakeLists.txt  JackJIT.cpp  Runtime.cpp
test/: CMakeLists.txt  CompilationEngine.test.cpp  JackAST.test.cpp  JackLexer.test.cpp  Runtime.test.cpp  SymbolTable.test.cpp
